--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,18 @@
     background-color: rgb(186, 161, 219);
     min-width: 20rem;
     display: grid;
-    grid-template-rows: 2rem 1fr;
+    grid-template-rows: auto auto;
     gap: 1rem;
     padding: 1rem;
 }
 
+.post-title {
+    padding: 0 1rem;
+    padding: 0 0 0 1rem;
+}
+
 .post-description {
     background-color: rgb(207, 182, 241);
-    padding: 1rem 1rem 1rem 0;
+    padding: 1rem;
+    padding: 1rem;
 }
