--- a/styles/form.css
+++ b/styles/form.css
@@ -3,7 +3,7 @@ form:not(.inline) {
     margin: auto;
     max-width: 500px;
     border: 1px solid;
-    background: var(--offset-color);
+    background-color: rgb(186, 161, 219);
     padding: 20px;
 
     display: grid;
