--- a/styles/global.css
+++ b/styles/global.css
@@ -34,17 +34,25 @@ body {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-.page-header .logo {
+.home-link {
     height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+.page-header .logo {
+    height: 80%;
 }
 
 .page-header .title {
-    font-size: 1.3em;
+    font-size: 1.4em;
     font-weight: 800;
     flex-grow: 2;
 }
 
 .page-header nav {
+    margin-left: auto;
     display: flex;
     gap: 10px;
 }
