--- a/styles/post-detail.css
+++ b/styles/post-detail.css
@@ -1,12 +1,12 @@
 .add-comment-form {
     width: 60%;
-    margin: 2rem auto;
+    margin: 2rem auto 0;
     padding: 1rem;
     background-color: rgb(186, 161, 219);
     min-width: 20rem;
 
     display: grid;
-    grid-template-columns: auto 2.5rem;
+    grid-template-columns: 1fr auto;
     /* justify-content: space-between; */
     align-items: center;
     border-radius: 0.5rem;
@@ -14,7 +14,7 @@
 }
 
 .add-comment-form input {
-    padding: 0 0.3rem;
+    padding: 0 0.8rem;
     border: 1px solid rgba(138, 138, 138, 0.494);
     border-radius: 0.5rem;
     flex-grow: 1;
@@ -22,6 +22,7 @@
 }
 
 .add-comment-form button {
+    width: 4rem;
     border: 1px solid rgba(138, 138, 138, 0.494);
     padding: 0 0.3rem;
     border: 0;
@@ -29,8 +30,12 @@
     height: 2rem;
 }
 
+.typing {
+    text-align: center;
+}
+
 .comment-list {
-    background-color: rgb(186, 161, 219);
+    /* background-color: rgb(186, 161, 219); */
     width: 60%;
     margin: 0 auto;
     padding: 0.5rem 0.2rem;
@@ -38,10 +43,10 @@
 }
 
 .comment-container {
-    width: 96%;
-    background-color: rgb(207, 182, 241);
+    /* width: 96%; */
+    /* margin: 0.5rem auto; */
     /* border: 1px solid rgba(138, 138, 138, 0.494); */
+    background-color: rgb(207, 182, 241);
     padding: 0.1rem 1rem;
     border-radius: 0.5rem;
-    margin: 0.5rem auto;
 }
